# music-converter

./: .gitignore  CMakeLists.txt  LICENCE.txt  README.md
.circleci/: config.yml
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  empty_tests.test.cpp
